[package]
name = "talkie-game"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
anyhow = "1.0.64"
bevy = { version="0.9.0", features=["dynamic"] }
leafwing-input-manager = "0.7.0"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
iyes_loopless = "0.9.0"
rand = "0.8.1"
tracing = "0.1.36"

[dev-dependencies]
assert_approx_eq = "1.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3