[package]
name = "talkie"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = "0.4.8"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }
amethyst-aseprite = { path = "../amethyst-aseprite" }
omn-sprites-amethyst-ext = { path="../omn-sprites-amethyst-ext" }

[dev-dependencies]
assert_approx_eq = "1.1.0"