[package]
name = "talkie"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version="0.8.1", features=["dynamic"] }
leafwing-input-manager = "0.5.2"
log = "0.4.8"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"